--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "optional": "es7"
   },
   "dependencies": {
+    "babel": "^5.8.29",
     "babel-require-hook": "^1.3.3",
+    "babel-core": "^5.8.29",
     "body-parser": "^1.14.1",
     "compression": "^1.6.0",
     "express": "^4.13.3",
@@ -19,9 +21,5 @@
     "multer": "^0.1.8",
     "mysql": "^2.9.0",
     "node-uuid": "^1.4.7"
-  },
-  "devDependencies": {
-    "babel": "=5.8.29",
-    "babel-core": "=5.8.29"
   }
 }
